<resources>
    <string name="a11y_call_duration_format" formatted="false">%d %s %d %s</string>
    <string name="a11y_call_duration_short_format" formatted="false">%d %s</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_build_version">Build version</string>
    <string name="about_contact">About %1$s</string>
    <string name="about_open_source_licenses">Open source licenses</string>
    <string name="about_open_source_licenses_summary">License details for open source software</string>
    <string name="about_phone_label">About</string>
    <string name="about_privacy_policy">Privacy policy</string>
    <string name="about_terms_of_service">Terms of service</string>
    <string name="accessibility_settings_title">Accessibility</string>
    <string name="account_phone">Device-only, unsynced</string>
    <string name="actionIncomingCall">Incoming calls</string>
    <string name="action_block_number">Block number</string>
    <string name="action_copy_number_text">Copy number</string>
    <string name="action_edit_number_before_call">Edit number before call</string>
    <string name="action_menu_back_from_search">stop searching</string>
    <string name="action_menu_call_history_description">Call history</string>
    <string name="action_menu_dialpad_button">key pad</string>
    <string name="action_menu_overflow_description">More options</string>
    <string name="action_report_number">Report inaccurate number</string>
    <string name="action_unblock_number">Unblock number</string>
    <string name="activity_not_available">No app for that on this device</string>
    <string name="activity_title_licenses">Open source licenses</string>
    <string name="activity_title_settings">Settings</string>
    <string name="addBlockedNumber">Add number</string>
    <string name="add_2sec_pause">Add 2-sec pause</string>
    <string name="add_all">Add All</string>
    <string name="add_contact_not_available">No contacts app available</string>
    <string name="add_new">Add New</string>
    <string name="add_new_event">Add New Event</string>
    <string name="add_new_phone">Add New Phone</string>
    <string name="add_to_favorites">Add contact to favorites</string>
    <string name="add_to_groups">Add to groups</string>
    <string name="add_wait">Add wait</string>
    <string name="address">Address</string>
    <string name="address_copied_to_clipboard">Address copied to clipboard.</string>
    <string name="all">All</string>
    <string name="all_contacts_empty">"You don't have any contacts yet"</string>
    <string name="all_contacts_empty_add_contact_action">Add a contact</string>
    <string name="alreadyBlocked">%1$s is already blocked.</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Contacts</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applicationLabel">Phone</string>
    <string name="back">Back</string>
    <string name="block_list">Blocked numbers</string>
    <string name="block_number_alert_details">%1$s This call will be reported as spam.</string>
    <string name="block_number_confirmation">You will no longer receive calls from this number.</string>
    <string name="block_number_confirmation_message_new_filtering">You will no longer receive calls or texts from this number.</string>
    <string name="block_number_confirmation_message_no_vvm">Calls from this number will be blocked, but the caller may still be able to leave you voicemails.</string>
    <string name="block_number_confirmation_message_vvm">Calls from this number will be blocked and voicemails will be automatically deleted.</string>
    <string name="block_number_confirmation_title">Block %1$s?</string>
    <string name="block_number_footer_message_no_vvm">Calls from these numbers will be blocked, but they may still be able to leave you voicemails.</string>
    <string name="block_number_footer_message_vvm">Calls from these numbers will be blocked and voicemails will be automatically deleted.</string>
    <string name="block_number_ok">BLOCK</string>
    <string name="block_number_search_hint">Add number or search contacts</string>
    <string name="block_number_title">Block %1$s?</string>
    <string name="block_number_undo">UNDO</string>
    <string name="block_report_number_alert_details">You will no longer receive calls from this number.</string>
    <string name="block_report_number_alert_title">Block %1$s?</string>
    <string name="blocked_call_settings_import_button">Import</string>
    <string name="blocked_call_settings_import_description">You previously marked some callers to be automatically sent to voicemail via other apps.</string>
    <string name="blocked_call_settings_view_numbers_button">View Numbers</string>
    <string name="blocked_number_call_log_label">Blocked</string>
    <string name="blocked_numbers_disabled_emergency_desc">Call blocking has been disabled because you contacted emergency services from this phone within the last 48 hours. It will be automatically reenabled once the 48 hour period expires.</string>
    <string name="blocked_numbers_disabled_emergency_header_label">Call blocking temporarily off</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="caching_vcard_message">Caching vCard(s) to local temporary storage. The actual import will start soon.</string>
    <string name="caching_vcard_title">Caching</string>
    <string name="call">Call</string>
    <string name="callDetailsDurationFormat" formatted="false">%s min %s sec</string>
    <string name="callDetailsShortDurationFormat">%s sec</string>
    <string name="callHistoryIconLabel">Call history</string>
    <string name="call_assistant">Call %s</string>
    <string name="call_blocking_disabled_notification_text">Disabled because an emergency call was made.</string>
    <string name="call_blocking_disabled_notification_title">Call blocking disabled for 48 hours</string>
    <string name="call_by_shortcut">%s (Call)</string>
    <string name="call_callback">Call callback</string>
    <string name="call_car">Call car</string>
    <string name="call_company_main">Call company main</string>
    <string name="call_composer_connection_failed">"%1$s is offline and can't be reached"</string>
    <string name="call_custom">Call %s</string>
    <string name="call_detail_list_header">Calls list</string>
    <string name="call_details_minutes_abbreviation">m</string>
    <string name="call_details_seconds_abbreviation">s</string>
    <string name="call_duration_format_pattern" formatted="false">"%s'%s' %s'%s'"</string>
    <string name="call_duration_short_format_pattern" formatted="false">"%s'%s'"</string>
    <string name="call_fax_home">Call home fax</string>
    <string name="call_fax_work">Call work fax</string>
    <string name="call_home">Call home</string>
    <string name="call_isdn">Call ISDN</string>
    <string name="call_log_action_block_number">Block number</string>
    <string name="call_log_action_block_report_number">Block/report spam</string>
    <string name="call_log_action_call">Call ^1</string>
    <string name="call_log_action_details">Call details</string>
    <string name="call_log_action_remove_spam">Not spam</string>
    <string name="call_log_action_send_message">Send a message</string>
    <string name="call_log_action_share_voicemail">Send to …</string>
    <string name="call_log_action_unblock_number">Unblock number</string>
    <string name="call_log_action_video_call">Video call</string>
    <string name="call_log_activity_title">Call History</string>
    <string name="call_log_activity_title_font_family">sans-serif-light</string>
    <string name="call_log_all_empty">Your call history is empty</string>
    <string name="cancel">Cancel</string>
    <string name="company">Company</string>
    <string name="contact_name_display">Contact name display</string>
    <string name="date">Date</string>
    <string name="email">Email</string>
    <string name="export_contacts">Export Contacts</string>
    <string name="first_last">First Last</string>
    <string name="first_name">First Name</string>
    <string name="fix_contacts">Fix contacts</string>
    <string name="import_contacts">Import Contacts</string>
    <string name="last_first">Last, First</string>
    <string name="last_name">Last Name</string>
    <string name="menu_add_remove_contacts">Add/Remove Contacts</string>
    <string name="menu_block_contact">Block contact</string>
    <string name="middle_name">Middle Name</string>
    <string name="name_prefix">Name Prefix</string>
    <string name="name_suffix">Name Suffix</string>
    <string name="note">Note</string>
    <string name="ok">OK</string>
    <string name="phone">Phone</string>
    <string name="quick_search">Quick Search</string>
    <string name="search_mode">Search mode</string>
    <string name="select_ringtone">Select ringtone</string>
    <string name="text_search">Text Search</string>
    <string name="title_add_to_contact">Add To Contact</string>
    <string name="title_contact_details">Contact Details</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_edit_contact">Edit Contact</string>
    <string name="title_group_details">Group %1$s</string>
    <string name="title_groups">Groups</string>
    <string name="use_large_fonts">Use large fonts</string>
    <string name="weekly_backup">Weekly backup to internal memory</string>
    <string name="whitelist_contacts_for_calls">Allow incoming calls from contacts only</string>
    <string name="whitelist_contacts_for_messages">Allow incoming messages from contacts only</string>
</resources>