<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:tag="layout/fragment_groups_chooser_0" android:background="@color/colorBackground" android:layout_width="fill_parent" android:layout_height="fill_parent" android:minWidth="@dimen/dialog_full_size" android:minHeight="@dimen/dialog_full_size"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title" android:padding="@dimen/normal_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/add_to_groups" />
    <androidx.recyclerview.widget.RecyclerView android:orientation="vertical" android:id="@id/groupsList" android:descendantFocusability="afterDescendants" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
    <LinearLayout android:gravity="end" android:orientation="horizontal" android:id="@id/buttons" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel" style="@style/Alert.Button.Neutral" />
        <Button android:id="@id/ok" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ok" style="@style/Alert.Button.Positive" />
    </LinearLayout>
</LinearLayout>
